Refactoring implementation to fine gain permissions Still need to figure out issues with authentication / authorization